# kcc

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  Project.cbp  README.md  ast.cc  ast.h  brainfuck.c  c4.c  cmake_install.cmake  compile.cc  config.h  format.cc  format.h  kcc  kcc.h  lex.cc  lex.h  main.cc  parse.cc  sema.cc  sema.h  test.c  visitor.h
src/: ast.cc  ast.h  cfg.cc  cfg.h  codegen.cc  codegen.h  compile.cc  compile.h  cpp.cc  cpp.h  format.cc  format.h  ir-gen.cc  ir-gen.h  ir.cc  ir.h  kcc.h  lex.cc  lex.h  log.h  main.cc  parse.cc  parse.h  registers.h  sema.cc  sema.h  type.cc  type.h  type.hpp  value.hpp  visitor.h  x64-gen.cc  x64-gen.h
